# OcuSafe

./: README.md  package-lock.json  package.json
src/: help.html  history.html  history.js  index.html  main.js  notification.html  notification.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
