[package]
name = "ocusafe"
version = "1.2.0"
description = "Aplikasi untuk membantu mencegah keluhan CVS"
authors = ["Widyarsi Nur Hamidah"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "fs-all", "window-set-position", "window-set-size", "window-set-resizable", "window-set-focus", "window-hide", "window-show", "system-tray", "window-center", "window-minimize", "window-create", "window-start-dragging", "dialog-ask", "dialog-message", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uptime_lib = "0.3.0"
auto-launch = "0.5.0"
process_path = "0.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
